# EnvUtils

./: .env  .env.development  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: lib.rs  libraries.rs
src/core/: error.rs
src/interactions/interfaces/: load.rs  retrieve.rs
src/interactions/repositories/: env_repository.rs
src/interactions/services/load/: load_env.rs
src/interactions/services/retrieve/: retrieve_or_default.rs  retrieve_or_default_with_error.rs  retrieve_with_error.rs
src/logic/: defaults.rs
src/logic/defaults/: boolean.rs  floating_point.rs  signed_integer.rs  string.rs  unsigned_integer.rs
src/ports/spi/env/: dotenvy.rs  env_type.rs
src/systems/: env_service.rs
src/tests/logic/: defaults_test.rs
src/tests/logic/defaults/: boolean.rs  floating_point.rs  signed_integer.rs  string.rs  unsigned_integer.rs
